testsuite/poke.pkl/sr-diag-2.pk
/* { dg-do compile } */

var a = [1,2,3] .>> 2; /* { dg-error "expected integral or offset" } */
